@@ -26,8 +26,10 @@ import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
 import java.io.ByteArrayInputStream;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.nio.file.Path;
 import java.util.Locale;
 
 import javax.xml.parsers.DocumentBuilderFactory;
@@ -620,7 +622,7 @@ public class DataDictionaryTest {
     // Support finding DD in classpath
     @Test
     public void testDictionaryInClassPath() throws Exception {
-        URLClassLoader customClassLoader = new URLClassLoader(new URL[] { new URL("file:etc") },
+        URLClassLoader customClassLoader = new URLClassLoader(new URL[] { Path.of("etc").toUri().toURL() },
                 getClass().getClassLoader());
         Thread currentThread = Thread.currentThread();
         ClassLoader previousContextClassLoader = currentThread.getContextClassLoader();
